--- a/src/styles/PostCard.css
+++ b/src/styles/PostCard.css
@@ -1,14 +1,13 @@
 .card-container {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  margin: 20px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   border-radius: 8px;
   transition: transform .2s;
-  width: 320px;
-  height: 320px;
+  width: 250px;
+  height: 250px;
+  padding: 30px;
+  margin: 20px;
 }
 
 .card-container:hover {
@@ -16,19 +15,34 @@
   cursor: pointer;
 }
 
-.card-image-container {
+.card-content-container {
   display: flex;
-  align-items: center;
-  justify-content: center;
+  flex-direction: column;
   width: 100%;
-  height: 75%; 
-  overflow: hidden;
+  height: 75%;
+}
+
+.card-post-title {
+  font-size: 24px;
+  font-weight: bold;
+  margin-bottom: 20px;
 }
 
 .card-info-container {
   display: flex;
-  align-items: center;
-  justify-content: space-between;
+  flex-direction: column;
+  align-items: flex-end;
+  justify-content: flex-end;
   width: 100%;
   height: 25%;
+}
+
+.card-post-author {
+  margin-bottom: 10px;
+  font-weight: bold;
+  font-size: 14px;
+}
+
+.card-post-date {
+  font-size: 14px;
 }
