--- a/src/styles/HomePage.css
+++ b/src/styles/HomePage.css
@@ -10,13 +10,13 @@
 
 .home-subcontainer {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-columns: repeat(4, auto);
   grid-template-rows: 1fr;
   max-width: 1400px;
   margin: 0px 40px 40px 40px;
 }
 
-.game-link {
+.post-link {
   color: black;
   text-decoration: none;
 }
