--- a/src/styles/PostPage.css
+++ b/src/styles/PostPage.css
@@ -27,6 +27,25 @@
   margin: 30px 0px 30px 0px;
 }
 
+.comment-container {
+  margin-bottom: 30px;
+}
+
+.comment-author {
+  margin-bottom: 10px;
+}
+
+.comment-content {
+  margin-bottom: 10px;
+  font-size: 14px;
+}
+
+.comment-date {
+  margin-bottom: 10px;
+  font-size: 14px;
+  opacity: 70%;
+}
+
 @keyframes fadeInAnimation {
   0% {
       opacity: 0;
