--- a/src/styles/PostPage.css
+++ b/src/styles/PostPage.css
@@ -27,6 +27,66 @@
   margin: 30px 0px 30px 0px;
 }
 
+.comment-form-open {
+  background-color: #112D4E;
+  color: white;
+  padding: 16px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  opacity: 0.8;
+  width: 150px;
+  margin: 10px 0 15px 0;
+  font-weight: bold;
+}
+
+.comment-form-container {
+  display: flex;
+  flex-direction: column;
+}
+
+.comment-form-container label {
+  font-size: 14px;
+}
+
+.comment-form-container input[type=text] {
+  width: 100%;
+  padding: 15px;
+  margin: 10px 0 15px 0;
+  border: none;
+  background: #f1f1f1;
+  border-radius: 4px;
+}
+
+.comment-form-container input[type=text]:focus {
+  background-color: #ddd;
+  outline: none;
+}
+
+.comment-form-container .btn {
+  background-color: lightseagreen;
+  color: white;
+  padding: 16px 20px;
+  margin-bottom: 10px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  width: 150px;
+  opacity: 0.8;
+  font-weight: bold;
+}
+
+.comment-form-container .btn:hover, .comment-form-open:hover {
+  opacity: 1;
+}
+
+.comment-form-error {
+  font-size: 14px;
+  font-weight: bold;
+  color: red;
+  margin-bottom: 5px;
+}
+
 .comment-container {
   margin-bottom: 30px;
 }
