--- a/src/styles/PostPage.css
+++ b/src/styles/PostPage.css
@@ -30,12 +30,11 @@
 .comment-form-open {
   background-color: #112D4E;
   color: white;
-  padding: 16px 20px;
+  padding: 15px;
   border: none;
-  border-radius: 4px;
+  border-radius: 6px;
   cursor: pointer;
   opacity: 0.8;
-  width: 150px;
   margin: 10px 0 15px 0;
   font-weight: bold;
 }
@@ -46,6 +45,7 @@
 }
 
 .comment-form-container label {
+  font-weight: bold;
   font-size: 14px;
 }
 
@@ -66,14 +66,14 @@
 .comment-form-container .btn {
   background-color: lightseagreen;
   color: white;
-  padding: 16px 20px;
+  padding: 15px;
   margin-bottom: 10px;
   border: none;
-  border-radius: 4px;
+  border-radius: 6px;
   cursor: pointer;
-  width: 150px;
   opacity: 0.8;
   font-weight: bold;
+  width: fit-content;
 }
 
 .comment-form-container .btn:hover, .comment-form-open:hover {
